footer margin issue on small screens fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,7 +100,7 @@
   box-sizing: border-box;
   font-family: var(--calSans-font);
 
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 p {
   font-family: var(--satoshiRegular-font);
